<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="service_question">How was the service?</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="service_cost">Cost Of Service</string>
    <string name="twenty_percent_tip">Amazing! (20%)</string>
    <string name="eighteen_percent_tip">Good (18%)</string>
    <string name="fifteen_percent_tip">OK (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">calculate</string>
    <string name="tip_amount">Tip Amount:%s</string>
    <string name="label">label</string>
</resources>